# dde-top-panel

./: .gitignore  .gitmodules  CMakeLists.txt  info  me.imever.dde-top-panel.desktop  readme.md
appmenu/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  com.canonical.AppMenu.Registrar.xml  dbus_registrar.cpp  dbus_registrar.h  dbusmenu_interface.cpp  dbusmenuimporter.cpp  dbusmenuimporter.h  menuimporter.cpp  menuimporter.h  menuimporteradaptor.cpp  menuimporteradaptor.h  registrar_proxy.cpp  registrar_proxy.h
debian/: README  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  me.imever.dde-top-panel.cron.d.ex  me.imever.dde-top-panel.doc-base.EX  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules
frame/: CMakeLists.txt  frame.qrc  main.cpp
frame/controller/: dockitemmanager.cpp  dockitemmanager.h  dockpluginscontroller.cpp  dockpluginscontroller.h
frame/dbus/: com.deepin.daemon.Display.xml  com.deepin.dde.toppanel.xml  com.deepin.dde.toppanel2.xml  dbustoppaneladaptors.cpp  dbustoppaneladaptors.h  me.imever.dde.toppanel.xml
frame/item/: appitem.cpp  appitem.h  dockitem.cpp  dockitem.h  hoverhighlighteffect.cpp  item.qrc  pluginsitem.cpp  pluginsitem.h  traypluginitem.cpp  traypluginitem.h
frame/panel/: MainPanelControl.cpp  MainPanelControl.h
frame/util/: AppInfo.h  CustomSettings.cpp  CustomSettings.h  CustomizeMenubar.cpp  CustomizeMenubar.h  TopPanelSettings.cpp  TopPanelSettings.h  XUtils.cpp  (+14 more)
interfaces/: constants.h  pluginsiteminterface.h
plugins/: CMakeLists.txt
plugins/bluetooth/: CMakeLists.txt  bluetoothitem.cpp  bluetoothitem.h  bluetoothplugin.cpp  bluetoothplugin.h
plugins/bluetooth/componments/: adaptersmanager.cpp  bluetoothapplet.cpp
plugins/datetime/: CMakeLists.txt  datetimeplugin.cpp  datetimeplugin.h  datetimewidget.cpp  datetimewidget.h
plugins/disk-mount/: CMakeLists.txt  diskcontrolitem.cpp  diskcontrolitem.h  diskmountplugin.cpp  diskmountplugin.h  diskpluginitem.cpp  diskpluginitem.h  resources.qrc
plugins/disk-mount/dbus/variant/: diskinfo.cpp  diskinfo.h
plugins/keyboard-layout/: CMakeLists.txt  dbusadaptors.cpp  keyboardplugin.cpp  keyboardplugin.h
plugins/multitasking/: CMakeLists.txt  multitaskingplugin.cpp  multitaskingwidget.cpp
plugins/network/: CMakeLists.txt  networkitem.cpp  networkitem.h  networkplugin.cpp
plugins/network/item/: deviceitem.cpp  wireditem.cpp
plugins/network/item/applet/: accesspointwidget.cpp
plugins/onboard/: CMakeLists.txt  onboarditem.cpp  onboarditem.h  onboardplugin.cpp  onboardplugin.h
plugins/power/: CMakeLists.txt  powerplugin.cpp  powerplugin.h  powerstatuswidget.cpp
plugins/sound/: CMakeLists.txt  sinkinputwidget.cpp  sinkinputwidget.h  soundapplet.cpp  soundapplet.h  sounditem.cpp  sounditem.h  soundplugin.cpp
plugins/sound/componments/: volumeslider.cpp
plugins/sound/resources/: sound.qrc
plugins/tray/: CMakeLists.txt  abstracttraywidget.cpp  abstracttraywidget.h  indicatortray.cpp  indicatortray.h  snitraywidget.cpp  snitraywidget.h  tray.qrc  trayplugin.cpp  trayplugin.h  xembedtraywidget.cpp
plugins/tray/fashiontray/: fashiontrayconstants.h  fashiontraycontrolwidget.cpp  fashiontraycontrolwidget.h  fashiontrayitem.cpp  fashiontrayitem.h  fashiontraywidgetwrapper.cpp
plugins/tray/fashiontray/containers/: abstractcontainer.cpp  abstractcontainer.h  holdcontainer.cpp  holdcontainer.h  normalcontainer.cpp  spliteranimated.cpp  spliteranimated.h
plugins/tray/system-trays/: systemtrayitem.cpp  systemtrayitem.h  systemtrayscontroller.cpp  systemtrayscontroller.h
schemas/: me.imever.dde.toppanel.gschema.xml
widgets/: ActiveWindowControlWidget.cpp  ActiveWindowControlWidget.h  QClickableLabel.cpp  QClickableLabel.h  ShowDesktopWidget.h  tipswidget.cpp  tipswidget.h
(+19 files in other folders)
