add_subdirectory("datetime")
# add_subdirectory("tray")
# add_subdirectory("multitasking")
add_subdirectory("dde-istate-menus")
# add_subdirectory("onboard")
# add_subdirectory("switch_graphics_card/src")

# add_subdirectory("bluetooth")
# add_subdirectory("sound")
# add_subdirectory("power")
# add_subdirectory("network")
# add_subdirectory("disk-mount")
add_subdirectory("WEATHER_DDE_DOCK")